fix(tabcontrol): fix tabcontrol line border alignment.

--- a/src/app/components/tabcontrol/tabcontrol.scss
+++ b/src/app/components/tabcontrol/tabcontrol.scss
@@ -42,6 +42,7 @@
     min-width: 70px;
     background: #f1f1f1;
     text-align: center;
+    padding: 0 10px;
     line-height: 25px;
     height: 26px;
     border: 1px solid #cacaca;
